--- a/src/components/Datepicker/datepicker-calendar.css
+++ b/src/components/Datepicker/datepicker-calendar.css
@@ -9,11 +9,8 @@ table {
 .sgds.monthpicker,
 .sgds.yearpicker {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(4, 3rem);
-  justify-content: space-between;
-  align-content: space-between;
-  padding: 1rem 0 0;
+  grid-template-columns: repeat(3, 6rem);
+  grid-template-rows: repeat(4, 2.5rem);
 }
 
 button.month,
@@ -21,85 +18,72 @@ button.year {
   padding: 0;
   border: 0;
   background-color: transparent;
+  border-radius: var(--sgds-form-border-radius-sm);
 }
-button.month.active {
+td[data-day].active:not(.selected-ends),
+button.month.active:not(.selected-ends),
+button.year.active:not(.selected-ends)
+ {
   cursor: pointer;
   background-color: var(--sgds-form-primary-bg-translucent);
+  border-radius: 0;
 }
-button.month.active.selected-ends {
-  background-color: var(--sgds-form-primary-bg-default);
-  color: var(--sgds-form-color-on-dark);
-}
-button.month:hover:not(.active) {
+td[data-day]:hover:not(.disabled):not(.selected-ends):not(.active),
+button.month:hover:not(.active),
+button.year:hover:not(.active)  {
   cursor: pointer;
   background-color: var(--sgds-form-bg-translucent);
 }
-button.month:focus {
-  outline: var(--datepicker-theme-color) auto 2px;
-  z-index: 100;
+td[data-day]:focus,
+button.month:focus,
+button.year:focus  {
+  box-shadow: var(--sgds-box-shadow-focus);
+  outline: unset;
 }
 button.year.active {
   cursor: pointer;
   background-color: var(--sgds-form-primary-bg-translucent);
 }
-button.year.active.selected-ends {
-  background-color: var(--sgds-form-primary-bg-default);
-  color: var(--sgds-form-color-on-dark);
-}
-button.year:hover:not(.active) {
-  cursor: pointer;
-  background-color: var(--sgds-form-bg-translucent);
-}
-button.year:focus {
-  outline: var(--datepicker-theme-color) auto 2px;
-  z-index: 100;
-}
+
 td, th {
-  width: var(--sgds-form-width-md, 40px);
-  height: var(--sgds-form-height-lg, 40px);
+  width: var(--sgds-form-width-md);
+  height: var(--sgds-form-height-lg);
   padding: 0;
   border-radius: var(--sgds-form-border-radius-sm);
 }
 td[data-day] {
   cursor: pointer;
 }
-td[data-day]:hover:not(.disabled):not(.selected-ends) {
-  cursor: pointer;
-  background-color: var(--sgds-form-bg-translucent);
-}
-td[data-day].active {
-  cursor: pointer;
-  background-color: var(--sgds-form-primary-bg-translucent);
-}
-td[data-day].active.selected-ends {
+
+td[data-day].active.selected-ends,
+button.month.active.selected-ends ,
+button.year.active.selected-ends  {
   background-color: var(--sgds-form-primary-bg);
   color: var(--sgds-form-color-on-dark);
 }
-td[data-day]:focus {
-  box-shadow: var(--sgds-box-shadow-focus);
-  outline: unset;
-}
 td[data-day].disabled {
-  color: var(--sgds-gray-400);
+  opacity: var(--sgds-opacity-50);
   cursor: not-allowed;
 }
 .today{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
+.today > span {
+  margin-top: 4px;
+}
+
 .today::after{
   background-color: var(--sgds-form-primary-bg);
   content: ".";
   line-height: 4px;
-  /* mask-size: 73%;
-  -webkit-mask-size: 73%; */
-  /* padding: 0 0.45em;
-  margin: 0 0.125rem; */
   -webkit-mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="4" height="4" viewBox="0 0 4 4" fill="none"><circle cx="2" cy="2" r="2" fill="%235A42C0"/></svg>');
   mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="4" height="4" viewBox="0 0 4 4" fill="none"><circle cx="2" cy="2" r="2" fill="%235A42C0"/></svg>');
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
+  
 }
