--- a/src/components/Alert/alert.css
+++ b/src/components/Alert/alert.css
@@ -35,18 +35,19 @@
 }
 
 .alert {
+  --sgds-alert-color: var(--sgds-default-color-on-dark);
   display: flex;
   flex-direction: row;
   gap: var(--sgds-gap-sm);
   background-color: var(--sgds-primary-bg);
   border: var(--sgds-border-width-1) solid var(--sgds-default-border-color-transparent);
   border-radius: var(--sgds-border-radius-md);
-  color: var(--sgds-default-color-on-dark);
+  color: var(--sgds-alert-color);
   padding: var(--sgds-padding-lg);
 }
 
 .alert.outlined {
-  color: var(--sgds-default-color-on-light);
+  --sgds-alert-color: var(--sgds-default-color-on-light);
   background-color: var(--sgds-primary-bg-subtle);
   border: var(--sgds-border-width-1) solid var(--sgds-primary-border-color-subtle);
 }
