style(masthead): update link color

--- a/src/components/Masthead/masthead.css
+++ b/src/components/Masthead/masthead.css
@@ -13,7 +13,6 @@ b {
 
 a {
   color: #0049dc;
-  
 }
 
 a:hover {
@@ -78,13 +77,13 @@ a:hover {
 .sgds-masthead-button {
   display: flex;
   gap: 4px;
-  color: light-dark(#0049dc, #7fb5ff);
+  color: light-dark(#5a42c0, #9288f0);
   align-items: center;
   cursor: pointer;
 }
 
 .sgds-masthead-button:hover {
-  color: light-dark(#0022b9, #5592ff);
+  color: light-dark(#42209f, #7562e2);
 }
 
 .panel {
@@ -141,13 +140,13 @@ a:hover {
 }
 
 a.trusted-websites-link {
-  color: light-dark(#0049dc, #7fb5ff);
+  color: light-dark(#5a42c0, #9288f0);
   width: fit-content;
   text-decoration: underline;
 }
 
 a.trusted-websites-link:hover {
-  color: light-dark(#0022b9, #5592ff);
+  color: light-dark(#42209f, #7562e2);
 }
 
 @media screen and (max-width: 768px) {
