--- a/cypress/apps/angular-app/src/components/breadcrumb/breadcrumb.component.html
+++ b/cypress/apps/angular-app/src/components/breadcrumb/breadcrumb.component.html
@@ -1,7 +1,14 @@
-<sgds-breadcrumb arialabel="breadcrumb">
-    <sgds-breadcrumb-item rel="noreferrer noopener" href="undefined" target="undefined">Home</sgds-breadcrumb-item>
-    <sgds-breadcrumb-item href="https://www.google.com">Item 1</sgds-breadcrumb-item>
-    <sgds-breadcrumb-item href="https://www.google.com">Item 2</sgds-breadcrumb-item>
-    <sgds-breadcrumb-item href="https://www.google.com">Item 3</sgds-breadcrumb-item>
-    <sgds-breadcrumb-item>Last Item</sgds-breadcrumb-item>
-</sgds-breadcrumb>
+<sgds-breadcrumb>
+    <sgds-breadcrumb-item>
+      <a href="#">Home</a>
+    </sgds-breadcrumb-item>
+    <sgds-breadcrumb-item>
+      <a href="#">About</a>
+    </sgds-breadcrumb-item>
+    <sgds-breadcrumb-item><a href="https://www.google.com">Contact</a></sgds-breadcrumb-item>
+    <sgds-breadcrumb-item><a href="#">Info</a></sgds-breadcrumb-item>
+    <sgds-breadcrumb-item><a href="#">More</a></sgds-breadcrumb-item>
+    <sgds-breadcrumb-item><a href="#">More</a></sgds-breadcrumb-item>
+    <sgds-breadcrumb-item><a href="#">More</a></sgds-breadcrumb-item>
+    <sgds-breadcrumb-item><a href="#">Last</a></sgds-breadcrumb-item>
+  </sgds-breadcrumb>
