style(reboot): add 100 percent height for hyperlink

--- a/src/css/reboot.css
+++ b/src/css/reboot.css
@@ -139,6 +139,7 @@ a {
   letter-spacing: var(--sgds-letter-spacing-normal);
   text-decoration: underline;
   color: var(--sgds-link-color);
+  height: 100%;
 }
 
 a:hover, a:focus-visible, a:focus {
