--- a/src/components/Pagination/pagination.css
+++ b/src/components/Pagination/pagination.css
@@ -1,13 +1,3 @@
-:host {
-  --pagination-color: var(--sgds-link);
-  --pagination-bg: var(--sgds-body-bg);
-  --pagination-hover-bg: var(--sgds-gray-200);
-  --pagination-active-color: var(--sgds-white);
-  --pagination-active-bg: var(--sgds-link);
-  --pagination-disabled-color: var(--sgds-gray);
-  --pagination-disabled-bg: var(--sgds-body-bg);
-}
-
 ul {
   padding-left: 2rem;
   margin-bottom: 1rem;
@@ -31,11 +21,7 @@ svg {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* position: relative;
-  padding: 0.5rem 1rem;
-  text-decoration: none;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
-    box-shadow 0.15s ease-in-out; */
+
 }
 @media (prefers-reduced-motion: reduce) {
   .page-link {
@@ -48,7 +34,7 @@ svg {
   z-index: 2;
 }
 .page-link:focus {
-  box-shadow: 0px 0px 0px 4px var(--sgds-blue-400);
+  box-shadow: var(--sgds-box-shadow-focus);
   outline: 0;
   z-index: 3;
 }
@@ -77,16 +63,16 @@ svg {
   height: var(--sgds-dimension-40);
 }
 
-.visually-hidden {
-  clip: rect(0, 0, 0, 0) !important;
-  border: 0 !important;
-  height: 1px !important;
-  margin: -1px !important;
-  overflow: hidden !important;
-  padding: 0 !important;
-  position: absolute !important;
-  white-space: nowrap !important;
-  width: 1px !important;
+.sr-only {
+  clip: rect(0, 0, 0, 0) ;
+  border: 0;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
 .pagination-description {
   display: flex;
