--- a/src/components/Sidenav/sidenav.css
+++ b/src/components/Sidenav/sidenav.css
@@ -1,10 +1,7 @@
 :host {
   --sidenav-theme-color: var(--sgds-primary);
   --sidenav-sticky-top: 0rem;
-  padding-left: calc(var(--sgds-padding-md) * 2);
-  padding-top: var(--sgds-padding-md);
-  padding-bottom: var(--sgds-padding-md);
-  padding-right: var(--sgds-padding-md);
+  padding: var(--sgds-padding-md);
 }
 
 div {
