--- a/src/components/Sidenav/sidenav-item.css
+++ b/src/components/Sidenav/sidenav-item.css
@@ -1,29 +1,21 @@
-:host {
-  --sidenav-item-btn-border-left-width: 0.125rem;
-  --sidenav-item-btn-padding-x: 1rem;
-  --sidenav-item-btn-padding-y: 0.5rem;
-  --sidenav-item-icon-title-gap: 1rem;
-}
-
-slot.default::slotted(*) {
+:host([class^="second-level"]) .sidenav-btn {
   padding-left: var(--sgds-padding-3-xl);
+  font-weight: var(--sgds-font-weight-regular);
+
 }
 
-slot.default::slotted(sgds-sidenav-item){
-  padding-left: var(--sgds-padding-md);
-}
 .sidenav-btn {
   width: 100%;
   text-align: initial;
-  line-height: 1.5rem;
-  font-size: var(--sgds-body-font-size);
+  line-height: var(--sgds-line-height-body);
+  font-size: var(--sgds-font-size-2);
   border: 0;
   background: 0;
-  padding: var(--sgds-padding-sm);
+  padding: var(--sgds-padding-sm) var(--sgds-padding-sm) var(--sgds-padding-sm) calc(var(--sgds-padding-sm) + var(--sgds-padding-2-xs));
   border-radius: var(--sgds-border-radius-md);
   display: flex;
   gap: var(--sgds-gap-xs);
-  align-items: center;
+  font-weight: var(--sgds-font-weight-semibold);
 
   .caret-icon, slot[name="caret-icon"]::slotted(*) {
     margin-left: auto;
@@ -31,15 +23,14 @@ slot.default::slotted(sgds-sidenav-item){
     transform: rotate(180deg);
   }
 }
-.sidenav-btn:hover {
+.sidenav-btn:hover:not(.disabled) {
   background-color: var(--sgds-default-bg-translucent-subtle);
 }
 .sidenav-btn.active {
-  color: var(--sidenav-theme-color);
-  font-weight: 700;
+  color: var(--sgds-default-color);
 }
 .sidenav-btn.disabled {
-  opacity: var(--sgds-disabled-opacity);
+  opacity: var(--sgds-opacity-50);
   cursor: not-allowed;
 }
 .sidenav-btn:not(.active) {
@@ -47,18 +38,17 @@ slot.default::slotted(sgds-sidenav-item){
     transform: rotate(0deg);
   }
 }
-
+.sidenav-btn:focus:not(.disabled), .sidenav-btn:focus-visible:not(.disabled) {
+  outline: 0;
+  box-shadow: var(--sgds-box-shadow-focus);
+  background-color: var(--sgds-default-bg-translucent-subtle);
+}
 a.sidenav-btn {
   color: inherit;
   text-decoration: none;
-  line-height: var(--sgds-line-height-md);
 }
 
-div.sidenav-list {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  padding-left: 0;
-  margin: 0;
-  line-height: var(--sgds-line-height-lg);
+:host([class^="first-level"]) a.sidenav-btn.active {
+  color: var(--sgds-primary-color);
+  background-color: var(--sgds-primary-bg-translucent);
 }
