--- a/src/components/Sidenav/sidenav.css
+++ b/src/components/Sidenav/sidenav.css
@@ -1,21 +1,12 @@
 :host {
-  --sidenav-theme-color: var(--sgds-primary);
   --sidenav-sticky-top: 0rem;
   padding: var(--sgds-padding-md);
 }
 
-div {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  list-style: none;
-  padding-left: 0;
-  margin: 0;
-}
 
 .sticky {
   position: sticky;
   top: var(--sidenav-sticky-top);
   height: calc(100vh - var(--sidenav-sticky-top));
-  overflow-y: auto;
+  overflow-y: visible;
 }
