--- a/src/components/ComboBox/combo-box.css
+++ b/src/components/ComboBox/combo-box.css
@@ -1,12 +1,16 @@
+.combobox .dropdown-menu {
+  min-width: 100%;
+}
+
 .sgds.combobox .form-control-icon {
   align-items: center;
-  display: flex;
+  /* display: flex;
   font-size: 1rem;
   height: 3rem;
   justify-content: center;
   position: absolute;
   width: 3rem;
-  z-index: 4;
+  z-index: 4; */
 }
 
 .sgds.combobox {
@@ -21,16 +25,16 @@
 }
 
 
-.sgds.combobox .dropdown-menu {
-
-  width: 100%;
-
-
+.dropdown-menu {
+  max-height: 10rem;
+  overflow-y: auto;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
-.sgds.combobox .dropdown-toggle {
+/* .sgds.combobox .dropdown-toggle {
   width: 100%;
-}
+} */
 
 .form-control-icon {
   bottom: 0;
