--- a/src/components/ComboBox/sgds-combo-box-item.css
+++ b/src/components/ComboBox/sgds-combo-box-item.css
@@ -6,6 +6,19 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* push text to left, icon to right */
-    width: 100%;
+
+}
+
+:host([active]) .dropdown-item .normal-item-content {
+    color: var(--sgds-primary-bg);
+}
+
+:host([active]) .dropdown-item .normal-item-content sgds-icon {
+    color: var(--sgds-primary-bg);
+    fill: var(--sgds-primary-bg);
+}
+
+.dropdown-item {
+    padding: var(--sgds-dropdown-item-padding-y, 0.5rem) var(--sgds-dropdown-item-padding-x, 1rem);
+
 }
